[package]
name = "MySniffer"
version = "0.1.0"
authors = ["pmacciacchera <polmacra@outlook.it> & a.recchia <recchiaalessandro0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "0.7.0"
syn = "1.0"
pktparse = "0.4.1"
dns-parser = "0.8.0"
tls-parser = "0.9.2"
rtp-rs = "0.5.0"
sipmsg = "0.1.1"
rtsparse = "1.0.0"