[package]
name = "MySniffer"
version = "0.1.0"
authors = ["pmacciacchera <polmacra@outlook.it> & a.recchia <recchiaalessandro0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "0.7.0"
syn = "1.0.33"
pktparse = { version = "0.4.1", features = ["derive"] }
dns-parser = "0.8.0"
tls-parser = "0.9.2"
rtp-rs = "0.5.0"

rtsparse = "1.0.0"
snmp-parser = "0.5.2"
httparse = "1.3.4"
clap = "2.33.0"
serde_json = "1.0.56"
serde = { version = "1.0.114", features = ["derive"] }
